# Deepblocks-code

./: README.md
States/: pyproject.toml
States/Alabama/: AL_scraper.py
States/Alaska/: AK_scraper.py
States/Arizona/: AZ_scraper.py
States/Arkansas/: AR_scraper.py
States/California/: CA_scraper.py
States/Colorado/: CO_scraper.py
States/DC/: DC_scraper.py
States/GeoCoding/: geo_coder.py
States/Kentucky/: KY_scraper.py
States/Louisiana/: LA_scraper.py
States/Massachusetts/: MA_scraper.py
States/Michigan/: MI_scraper.py
States/Mississippi/: MS_scraper.py  MS_scraper_solution2.py
States/Missouri/: MO_scraper.py
States/Montana/: MT_scraper.py
States/North Carolina/: All_bots.py  NC_scraper.py
States/Oklahoma/: OK_scraper.py
States/Pennsylvania/: PA_scraper.py
States/Rhode Island/: RI_scraper.py
States/Sunbiz_Standardization/: standardize.py
States/Utah/: UT_scraper.py
States/Virginia/: VA_scraper.py
States/Washington/: WA_scraper.py
States/Wisconsin/: WI_scraper.py
States/Wyoming/: WY_scraper.py
States/Zoning/: muni_paragraph.py  muni_table.py  zoning_scoring.py
