[tool.poetry]
name = "deepblocks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
bs4 = "^0.0.1"
pandas = "^1.0.5"
geopy = "^2.0.0"
geopandas = "^0.8.1"
geocoder = "^1.38.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
